set (SHADER_TOOL_NAME Shaderc)

project(${SHADER_TOOL_NAME})

message("Building ${SHADER_TOOL_NAME}...")
# TODO: fix build... lot of bx:: functions not found
# temporarly, get .exe (https://www.lwjgl.org/browse/nightly)

# add_executable(${SHADER_TOOL_NAME} shaderc.cpp)

# target_link_libraries(${SHADER_TOOL_NAME} PUBLIC shaderc.hpp)
# target_link_libraries (${SHADER_TOOL_NAME} PUBLIC bgfx)
